Fixed bug with skin thumbnails appearing incorrectly on smaller screens

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -97,6 +97,8 @@ html {
 .skin-preview {
     padding-top: 20px;
     .skin-thumbnails {
+        display: flex;
+        flex-wrap: wrap;
         .skin-thumbnail {
             cursor: pointer;
             padding: 0 0 1px 1px;
